cart created with signup

--- a/client/src/components/WhatsNew/WhatsNew.css
+++ b/client/src/components/WhatsNew/WhatsNew.css
@@ -1,3 +1,8 @@
+.MuiPaper-root .makeStyles-paper-2 .MuiPaper-elevation1 .MuiPaper-rounded {
+    height: fit-content;
+}
+
+
 /* line 2, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_latest_products.scss */
 .latest-product-area .latest-area {
     background-size: cover;
